# Lyapunov-Exponent

./: .gitignore  README.md  pyproject.toml  requirements.txt
algorithms/: dimensions.py  dynamics.py  experiment_maker.py  lorenz_lyapunov.py  lyapunov.py  main.py  method_comparison.py  ode_runner.py
configs/: config_c3_parameters.py
core/: dimensions.py  lyapunov.py  main.py  ode_runner.py  tangent_dynamics.py
examples/: pre_examples.py  reproduce_1_lorenz.py  reproduce_2_method_comparison.py  reproduce_3_phase_portraits.py  reproduce_4_lyapunov_maps.py  reproduce_5_d2_maps.py  reproduce_all.py  reproduce_fig_1_2_phase_portraits.py  reproduce_fig_3_lyapunov_maps.py  reproduce_table_1_lorenz.py  reproduce_table_3_numerical_comparison.py  reproduce_table_4_reliability.py  reproduce_table_6_method_comparison.py  reproduce_table_7_config_c3.py
experiments/: config_c3_search.py  experiment_maker.py  grid_generation.py  method_comparison.py  nolds_parameter_search.py
loggers/: G_cut_log.txt  G_cut_log_fix_pa.txt  KM_cut_log.txt  KM_cut_log_fix_pa.txt  RP_cut_log.txt  RP_cut_log_fix_pa_01.txt
models/: bubble_models.py  lorenz.py
plotting/: __init__.py  correlation_dimension_maps.py  d2_maps.py  le_maps.py  lyapunov_maps.py  phase_plot.py  phase_portraits.py  styles.py  utils.py
results/: G_fix_freq.npy  G_fix_pa.npy  G_fix_pa_01.npy  KM_fix_freq.npy  KM_fix_pa.npy  KM_fix_pa_01.npy  RP_fix_pa_01.npy
runners/: config_c3_parameters.py  figures_radius.py  find_best_parameters_nolds.py  generate_reliability_table.py  run_c2_sanity_check.py  run_configuration_c3.py  run_correlation_dimension_maps.py  run_d2_maps.py  run_fix_freq.py  run_fix_pa.py  run_fixed_frequency_scan.py  run_lce_comparison.py  run_lce_method_comparison.py  run_le_maps.py  run_lorenz.py  run_lyapunov_maps.py  run_method_comparison.py  run_numerical_comparison.py  run_phase_plots.py  run_phase_portraits.py  run_sanity_check.py
scripts/: __init__.py  find_best_parameters_nolds.py  generate_radius_figures.py  run_config_c3_parameter_search.py  run_configuration_c3.py  run_correlation_dimension_maps.py  run_fixed_frequency_scan.py  run_fixed_pressure_scan.py  run_lyapunov_maps.py  run_nolds_parameter_search.py
utils/: logging_utils.py
visualization/: d2_maps.py  le_maps.py  (+2 more)
(+2 files in other folders)
