[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapunov-exponent"
version = "0.0.1"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["algorithms*", "runners*", "utils*", "visualizations*"]
exclude = ["results*", "loggers*"]
