[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapunov-exponent"
version = "0.1.0"
description = "Robust numerical calculation of Lyapunov exponents for chaotic bubble dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Trinidad Gatica" }
]
keywords = ["lyapunov", "chaos", "bubble-dynamics", "cavitation", "nonlinear-dynamics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
  "numpy==1.24.3",
  "scipy==1.11.1",
  "pandas==2.2.3",
  "matplotlib==3.7.2",
  "nolds==0.5.2",
  "tqdm==4.66.1",
  "plotly==5.16.1",
  "openpyxl==3.1.5",
  "tabulate==0.9.0",
  "seaborn==0.12.2",
  "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/trinidadgatica/Lyapunov-Exponent"
Repository = "https://github.com/trinidadgatica/Lyapunov-Exponent"
Issues = "https://github.com/trinidadgatica/Lyapunov-Exponent/issues"

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.6.0",
  "pytest>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "models*", "experiments*", "plotting*"]

# ---- Formatting / linting (optional but recommended) ----
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "models", "experiments", "plotting", "utils*", "configs*", "scripts*"]